<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:padding="20dp"
             android:background="@color/black"
             tools:context=".ui.changePassword.ChangePasswordFragment">

    <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent"
                  android:orientation="vertical">

        <EditText
                android:id="@+id/etOldPassword"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:textSize="13.7sp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:paddingStart="10dp"
                android:inputType="date"
                android:letterSpacing="0.07"
                android:lineSpacingExtra="16sp"
                android:hint="@string/old_password"
                android:background="@drawable/edit_text_background"
                android:layout_marginEnd="10dp" android:singleLine="true"/>

        <EditText
                android:id="@+id/etNewPassword"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:textSize="13.7sp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:paddingStart="10dp"
                android:inputType="date"
                android:letterSpacing="0.07"
                android:lineSpacingExtra="16sp"
                android:hint="@string/new_password"
                android:background="@drawable/edit_text_background"
                android:layout_marginEnd="10dp" android:singleLine="true"/>

        <EditText
                android:id="@+id/etConfirmPassword"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:textSize="13.7sp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:paddingStart="10dp"
                android:inputType="date"
                android:letterSpacing="0.07"
                android:lineSpacingExtra="16sp"
                android:hint="@string/confirm_password"
                android:background="@drawable/edit_text_background"
                android:layout_marginEnd="10dp"
                android:singleLine="true"/>

        <Button
                android:text="@string/update"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:id="@+id/btnUpdate"
                android:singleLine="true"
                android:imeOptions="actionDone"
                android:textColor="@color/white"
                android:background="@mipmap/reset_pass_back"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"/>

    </LinearLayout>

</FrameLayout>