<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:background="@color/black"
        android:layout_height="match_parent"
        tools:context=".UI.register.RegisterActivity">

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/login_icon"
            android:id="@+id/imageView5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="96dp"/>

    <LinearLayout android:id="@+id/linear"
                  app:layout_constraintTop_toBottomOf="@+id/imageView5"
                  app:layout_constraintStart_toStartOf="@+id/imageView5" android:layout_width="match_parent"
                  android:layout_height="30dp"
                  android:orientation="horizontal"
                  android:layout_marginTop="25dp"
                  android:layout_marginStart="20dp"
                  android:layout_marginEnd="20dp">

        <View
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:layout_weight="1.3"
                android:gravity="center_horizontal"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:background="@color/white"/>

        <TextView
                android:layout_marginEnd="4dp"
                android:layout_weight="1"
                android:id="@+id/textView3"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:textSize="10sp"
                android:textColor="@color/white"
                android:letterSpacing="0.07"
                android:lineSpacingExtra="6.5sp"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:text="@string/please_enter_your_mail"/>

        <View
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:layout_weight="1.3"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:background="@color/white"/>

    </LinearLayout>

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/linear"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.062">

        <EditText
                android:id="@+id/email"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:ems="10"
                android:layout_marginTop="15dp"
                android:textColor="@color/white"
                android:hint="@string/email"
                android:layout_marginStart="20dp"
                android:textColorHint="@color/white"
                android:background="@drawable/light_black_btn_background_3"
                android:layout_marginEnd="20dp"
                android:paddingStart="15dp"/>

        <LinearLayout android:layout_marginTop="25dp" android:layout_width="match_parent" android:layout_height="60dp"
                      android:orientation="horizontal">

            <Button
                    android:text="@string/cancel"
                    android:layout_width="fill_parent"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:id="@+id/btnCancel"
                    android:background="@drawable/grey_btn_background"
                    android:textSize="14.5sp"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="10dp"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:letterSpacing="0.07"
                    android:lineSpacingExtra="50.3sp"
                    android:textStyle="normal"
                    android:gravity="center"/>


            <Button
                    android:text="@string/reset_password"
                    android:layout_width="fill_parent"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:id="@+id/btnResetPassword"
                    android:background="@mipmap/reset_pass_back"
                    android:textSize="14.5sp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="15dp"
                    android:textColor="@color/white"
                    android:letterSpacing="0.07"
                    android:lineSpacingExtra="50.3sp"
                    android:textStyle="normal"
                    android:gravity="center"/>

        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>